# mrs_uav_system

./: .gitignore  .mergify.yml  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  install.sh  package.xml
.ci/: ci_before_install.sh  ci_test.sh  ci_test_build.sh  deploy_key_github.enc  docker.sh  docker_with_linux_setup.sh  docker_with_linux_setup_modules.sh  docker_without_linux_setup.sh  docker_without_linux_setup_arm.sh  docker_without_linux_setup_modules.sh  install.sh  singularity.sh  takeoff_test.sh  test.sh
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---documentation-issue.md  ---feature-request.md  --support-question.md  -book--documentation-issue.md  bug_report.md
.github/workflows/: docker.yml  docker_with_linux_setup.yml  docker_with_linux_setup_modules.yml  docker_without_linux_setup.yml  docker_without_linux_setup_arm.yml  docker_without_linux_setup_modules.yml  main.yml  melodic.yml  noetic.yml  ros_build_test.yml  ros_package_build.yml  singularity.yml
dependencies/: git_lfs.sh  gitman.sh  ros.sh
docker/: 1.5  build.sh  debian  debian_base  old_system  with_linux_setup  with_linux_setup_modules  without_linux_setup  without_linux_setup_modules
ros_packages/mrs_uav_system/: CMakeLists.txt  package.xml
ros_packages/mrs_uav_system_full/: CMakeLists.txt  package.xml
scripts/: mrs_certificate.sh  set_mrs_workspace.sh  set_my_workspace.sh
