<?xml version="1.0"?>
<package format="2">

  <name>mrs_uav_system</name>
  <version>1.0.0</version>
  <description>The MRS UAV System metapackage</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>rospy</depend>

  <run_depend>mrs_uav_core</run_depend>
  <run_depend>mrs_uav_gazebo_simulation</run_depend>
  <run_depend>mrs_uav_deployment</run_depend>
  <run_depend>mrs_uav_modules</run_depend>

  <run_depend>mrs_uav_px4_api</run_depend>
  <run_depend>mrs_uav_dji_tello_api</run_depend>

  <run_depend>python-is-python3</run_depend>

</package>
