<?xml version="1.0"?>
<package format="2">

  <name>mrs_uav_system</name>
  <version>1.0.0</version>
  <description>The MRS UAV System metapackage</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>mrs_uav_core</exec_depend>
  <exec_depend>mrs_uav_modules</exec_depend>

  <exec_depend>python-is-python3</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
