<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>mrs_uav_system</name>
  <version>2.0.0</version>
  <description>The MRS UAV System metapackage</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mrs_uav_core</exec_depend>
  <exec_depend>mrs_uav_modules</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
